--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
 
+
+= form_tag  movies_path, :method => :get,:id =>'ratings_form' do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "rating[#{rating}]"
+  = submit_tag 'Refresh' ,:id =>'ratings_submit'
+
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
+      %th{:class=> ("hilite" if @sort_v=='title')}= link_to 'Movie Title',{ controller:'movies' ,action:'index', sort:'title'},:id =>'title_header' 
       %th Rating
-      %th Release Date
+      %th{:class=> ("hilite" if @sort_v=='release_date')}= link_to 'Release Date',{ controller:'movies' ,action:'index',sort:'release_date'},:id =>'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
